Clean up functions and consolidate in dedicated .py: sm_functions.py

--- a/DataCreator_SM.ipynb
+++ b/DataCreator_SM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "\n",
     "all_moves_list = []\n",
     "i = 11\n",
-    "while i <= (len(game_list)/200):           ###### NOTE: '/100' only using 1% of the data availible from grandmasters\n",
+    "while i <= (len(game_list)/200):           ###### NOTE: '/200' only using 1% of the data availible from grandmasters\n",
     "    all_moves_list.append(game_list[i])\n",
     "    i += 16\n",
     "    \n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +89,8 @@
      "output_type": "stream",
      "text": [
       "1378\n",
-      "CPU times: user 173 ms, sys: 16 ms, total: 189 ms\n",
-      "Wall time: 237 ms\n"
+      "CPU times: user 287 ms, sys: 16.1 ms, total: 303 ms\n",
+      "Wall time: 339 ms\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,15 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.28 ms, sys: 66 µs, total: 1.34 ms\n",
-      "Wall time: 1.35 ms\n"
+      "CPU times: user 1.52 ms, sys: 114 µs, total: 1.63 ms\n",
+      "Wall time: 1.66 ms\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -173,10 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Maybe try (# apt install stockfish)\n",
+    "### stockfish 3.5.0 released Dec 14, 2019 ... maybe try a previous version....\n",
+    "### \n",
+    "\n",
     "from stockfish import Stockfish\n",
     "\n",
     "stockfish = Stockfish('Desktop/stockfish-11-mac/Mac/stockfish-11-64')"
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,11 +249,14 @@
     "    string = string.replace('1','1'*1)\n",
     "    string = string.replace('/','')\n",
     "    string_list = [i for i in string]\n",
-    "    return(string_list)\n",
+    "    string_array = np.asarray(string_list)\n",
+    "    \n",
+    "    return(string_array)\n",
+    "\n",
     "\n",
     "def get_bitwise(board_state):\n",
     "    '''\n",
-    "    Takes a \n",
+    "    Takes a [1x64] board state and creates 6 bitwise [1x64]\n",
     "    '''\n",
     "    bs = board_state #test ---- #First posiiton tuple  #winning_position[0][0] - for i in range:\n",
     "    r_ray = np.zeros(64)\n",
@@ -288,50 +295,44 @@
     "            p_ray[i] = -1\n",
     "        if bs[i] == 'P':\n",
     "            p_ray[i] = 1 \n",
-    "    master_ray = np.array((r_ray, n_ray, b_ray, q_ray, k_ray, p_ray))\n",
+    "    master_ray = np.array((r_ray.astype('int8'), n_ray.astype('int8'), b_ray.astype('int8'), q_ray.astype('int8'), k_ray.astype('int8'), p_ray.astype('int8')))\n",
     "    return(master_ray)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1378"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(all_san_list)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_games = all_san_list\n"
+    "test_games = all_san_list[:10]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Takes a list of games, with a list of move inside each game, and generates novel board states - StockFish chess engine will then evaluate the positional score of each state and pair it up with "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10min 41s, sys: 20.3 s, total: 11min 1s\n",
-      "Wall time: 28min 41s\n"
+      "CPU times: user 4.33 s, sys: 172 ms, total: 4.5 s\n",
+      "Wall time: 9.48 s\n"
      ]
     }
    ],
@@ -339,139 +340,82 @@
     "%%time\n",
     "list_scores = []\n",
     "engine = chess.engine.SimpleEngine.popen_uci(\"Desktop/stockfish-11-mac 2/Mac/stockfish-11-64\")\n",
+    "\n",
     "for game in test_games:\n",
     "    board = chess.Board()\n",
     "    for i in game:\n",
-    "        info = engine.analyse(board, chess.engine.Limit(depth=10))\n",
+    "        info = engine.analyse(board, chess.engine.Limit(depth=9))\n",
     "        x = str(info['score']).replace('#+', '1000')\n",
     "        x = x.replace('#-', '-1000')\n",
-    "        list_scores.append((int(x), get_bitwise(clean_fen(board.board_fen())))) ### NEED TO GET BITWISE IN HERE\n",
+    "        list_scores.append((int(x), get_bitwise(clean_fen(board.board_fen())))) ### takes the\n",
     "        board.push_san(i)\n",
-    "        \n",
-    "### . chess.engine.PlayResult()"
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 84 seconds - depth 9 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>105</td>\n",
-       "      <td>[[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>[[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>101</td>\n",
-       "      <td>[[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>60</td>\n",
-       "      <td>[[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>29</td>\n",
-       "      <td>[[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>122106</td>\n",
-       "      <td>723</td>\n",
-       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>122107</td>\n",
-       "      <td>-1362</td>\n",
-       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>122108</td>\n",
-       "      <td>1403</td>\n",
-       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>122109</td>\n",
-       "      <td>-1446</td>\n",
-       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>122110</td>\n",
-       "      <td>10004</td>\n",
-       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>122111 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            0                                                  1\n",
-       "0         105  [[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....\n",
-       "1          16  [[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....\n",
-       "2         101  [[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....\n",
-       "3          60  [[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....\n",
-       "4          29  [[-1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0....\n",
-       "...       ...                                                ...\n",
-       "122106    723  [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-       "122107  -1362  [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-       "122108   1403  [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-       "122109  -1446  [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-       "122110  10004  [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,...\n",
-       "\n",
-       "[122111 rows x 2 columns]"
+       "array([[-1,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  1],\n",
+       "       [ 0, -1,  0,  0,  0,  0, -1,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  1,  0],\n",
+       "       [ 0,  0, -1,  0,  0, -1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  1,  0,  0],\n",
+       "       [ 0,  0,  0, -1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0, -1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "         1,  1,  1,  1,  1,  1,  1,  1,  0,  0,  0,  0,  0,  0,  0,  0]],\n",
+       "      dtype=int8)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame(list_scores)\n",
-    "df"
+    "df[1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,9 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "duck"
    ]
