Add VM Notebook to repo and second model

--- a/ShallowMind.ipynb
+++ b/ShallowMind.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import itertools"
+    "import itertools\n",
+    "\n",
+    "import sm_functions"
    ]
   },
   {
@@ -1906,7 +1908,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b"
+    "clean_fen()"
    ]
   },
   {
